tests/neg-macros/i19342.check
-- Error: tests/neg-macros/i19342.scala:5:26 ---------------------------------------------------------------------------
5 |    case '{ ((y: Int) => $f(y)).apply($z: Int) } => () // error
  |                          ^
  |                          Type must be fully defined.
  |                          Consider annotating the splice using a type ascription:
  |                            ($f(y): XYZ).
